Some fixes on the primality test.

--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -479,16 +479,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from sympy import IndexedBase, Eq, solve\n",
+    "from sympy import IndexedBase, Eq, solve, init_printing, Xor\n",
     "from math import sqrt, ceil\n",
     "from itertools import product\n",
-    "from collections import defaultdict    \n",
+    "from collections import defaultdict\n",
+    "\n",
+    "init_printing()\n",
     "\n",
     "def prefix_dictionaries(n, indexes): # be the integer under study, we would like to decide if is a *prime* or not\n",
     "    \n",
@@ -500,19 +502,42 @@
     "    for prefix in range(ceil(sqrt(bits)), bits):\n",
     "        compl = bits - prefix\n",
     "        pairs = defaultdict(lambda: 0)\n",
-    "        for i, j in product(range(0,prefix+1), range(0,prefix+1)): # compl\n",
+    "        for i, j in product(range(0,prefix+1), range(0,compl)): # compl\n",
     "            pairs[i+j] += x[i]*y[j]\n",
-    "        yield prefix, pairs\n",
+    "        yield compl, pairs\n",
     "        \n",
     "def prefix_systems(n, dicts, init={}):\n",
-    "    for prefix, dictionary in dicts:\n",
-    "        yield [Eq(is_on(n, k, return_int=True), v).subs(init) \n",
-    "               for k, v in dictionary.items() if k]\n",
+    "    for compl, dictionary in dicts:\n",
+    "        yield { (k, compl) : Eq(is_on(n, k, return_int=True), v).subs(init) \n",
+    "               for k, v in dictionary.items() if k}\n",
+    "    \n",
+    "def rec(eqs, subscripts_sum, substitutions):\n",
+    "    \n",
+    "    if not eqs: yield substitutions\n",
+    "    \n",
+    "    eq = eqs.pop(subscripts_sum)\n",
+    "    \n",
+    "    substitutions[y[subscripts_sum]] = 0\n",
+    "    subst_eq = eq.subs(substitutions)\n",
+    "    if not subst_eq:\n",
+    "        yield False\n",
+    "    elif subst_eq == True:\n",
+    "        yield from rec(dict(eqs), subscripts_sum + 1, substitutions)\n",
+    "    else:\n",
+    "        sol = solve(subst_eq, x[subscripts_sum]).pop()\n",
+    "        new_substitutions = dict(substitutions)\n",
+    "        new_substitutions[x[subscripts_sum]] = sol.rhs % 2\n",
+    "    \n",
     "    \n",
     "def diofantine(systems):\n",
     "    for s in systems:\n",
     "        for sol in solve(s):\n",
-    "            for k, v in sol.items():\n",
+    "            for (k, compl), v in sol.items():\n",
+    "                for i in range(1, compl):\n",
+    "                    eq = v[i, compl]\n",
+    "                    substitutions = {y[i]:1}\n",
+    "                    \n",
+    "                \n",
     "                if not v.is_integer: break\n",
     "            else:\n",
     "                yield sol\n",
@@ -533,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -541,35 +566,31 @@
    "source": [
     "x, y = IndexedBase('x'), IndexedBase('y')\n",
     "\n",
-    "n = 21\n",
+    "n = 35\n",
     "\n",
     "g = prefix_dictionaries(n, (x,y))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABAUAAAAVBAMAAADMTkrPAAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAIma7zZnddlTvRIkQ\nqzLsm4+cAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAInklEQVRoBe1aXYgkVxX+umf7Z7p7e5pIFn8e\ntiNECXlwNIg/JNjiaAIiGZJdfUg2TqJkNRrSDw6L7EomSDQBlx0wGA2LmRcNQXDbn8kQkmjlwQzD\nsuwkLC5iov2QefJhNjGYVceM5+feqlu36nb1LOsKy16Yqlvnfuf77jl16t7qYoBgu7YbHLoycDlk\nYOOIjaLUtb30+aVB+vrK1WWXgaeHwDUc1buA9z338Wx8HyLTH379u+zApbWU9t8wvLSKgXz8ryex\ncZEFbo42FgooKz1gd4dAn0ZpFse6GfizZLkFLzFkB61+fAfgcaCn0PzXOLiLiMnPx0UUyKX6Sq71\nwo1Pbv+7yLk5B7R6QHkWtfOYoiuvUQ2UF9HseebRl6cObI0G6Gi9Pw5KMK8CPxkDXMhYCEhE8vOR\njJteIWMhwKWs/dC9CvW/HxrI2j9/tvDxbS6S2wpQ7aDxBE73MiRUAxPrqI91TxPn2lj4HWTnR8Bf\nhwl/qFfIWAhImPPzkYybXiFjIcClvOoz7lWov4MaWA9xJHapgTVgj5jy94KpdTTOJy7j9C56Ddwa\nXfIaoDhz8pGJvvAWFwJcysH/qwZ2LWGeJ9L6hjsd7dM6cHoWjbf5qipFtfqd9x7uy+Dql1A6rjDv\naGrAd2jN9/GeKMba7CSMHiBGcueBiA7K2Dr08lO0eFHzHCzjhQOE1RxMPu4XoUsiWe5oDYgkkrx4\nmbbrQBCQRPHKB++SixGMsg5UZvERApaeuTPxtb0zwN4B2vJisdYja2tQPljlDjB4FLVz0vMPpgZ8\nh2Z9EQ8mWHPHHEYPkECBRjIFnMQH+l+VQc/B1sCFAxxJk4/WY2y7cMbCOTmSq5AaUEknL16mTQ2E\nAQnljdi7RFejGMt8D8s9fI1OwLNLcnIO9Z9SDcyaGhB7M2pu1Ts4fBilhX2YmK6tDBy86bp7QeKA\nd1d6uAHtnkGZ7BgAmxVA3NmmK4Dan8fvo4fAyuqw/NFIB2y+FYDXLaMvCQU0b79zlKSbD58xIJkw\nhiTnXx0hOdAa0GBMXkhJM83c2kwNGMDKAQPgeLNtYi62+Q6G8bMEqM/hCcFN+it7+xNDZy8QTAu7\npqlsBvX1Fh7HVP96HBV76uDWQOKAaLKPt9sH5hjbnJn53GMzM+tUo8IoZgEwd4pNLvY7pkhSxcri\n0Ozs7tFowggFbPwRAUkD+BXOKCBfEk4+PMaQZMyYidJI3obbw5L1oVsDmhdW0kwzN7Xfzsx8fWbm\nC9RTQKVbmVYAx5ttlTdim+9gGHcfBNrnuAZKHUxkXv0atA7QO2HdHZjq0768hC00trA5vA9TUSxi\nO24NEIF1wImo/Q6XnDb71ApAzQwQbstkz7VZ25Mzv5+Isjh02ibOmBHyAvM9QgUkBXA3NjsCyJP0\n85FirAYkY8acKEXyDtBXt1CUJ+HWgEkcK0mmhVuiN+uAAioDWswFAI433ejhSH1Y4VuROBhGrieq\nAdoLprZyaoBLb2Ia5S2HenNIa8MQPwat7N9uvYPJBWdQu+kaiB2wD7XFnOwwQM0MEG6f8mGu0bhR\nJUGV2aG6VDIfkOIaYAAkJwFJAdzHm2VI0stHmjEkGTPmRKkMtA4EJY++9to/z8ZBgp4wftooOM40\n1TzNVlpcA5I4VKYVkFMDkz1U/HtHVWAclFHeBxpz/E44OY1qsmyoGPCMfCOiOdhWjx5ELaLn5x7+\ncHATFWm1a8fis1sDjgNuYh9/HVCAmhkg3DGVdtr0DSupgR/Qq+gRVRbG+PuFrQEBaA3kSsIAcCyS\nOeVJpvPhM4YkLWMmSivZopU1FCXF6nwjMnlhJc40DdJspZkasIC1oQFk14EKFVFPneiYcRDG5iIN\nlXtYpmMXx/qtt+jabfTbkBYJUqG21qPDiYVP4SpsRjhI5dR4s72Faj/zccnUgO9Az8CJbiY7yqhm\nBgj3adZK2p7nlmWzE8bG+Ylzpa4qCyNPQZqpAQVoDeRKWgAFIXMSSS92yQexyiu1deAsj5S0jJko\nLcO3aKpxlJ4kkf+d49C3eJMXDo4zTXaarTRTAwZQu5mfbAbQ7DxG+uB9XYd8UoyJgzBKDVQG+Dnh\nfrb/k8C9EfWcxjVw8tBfxCKv5qcOrd7W5X30cbT+PP8GPY30olf9puNCM/rTW6+wwXfAqZUvdzLZ\nUUY1M0C4PcZbt7f/ETO2zh6Zfz9UWRi5hKWZGlCA1kCupAU0ZyFzEkk/dskH0d5Pf9aBa2CkpGXM\nRGkZqADCkvjNtiSOJWHywsFxpumll2YrzdSABdDSrgCe3b2RQOzh6hf0x0SKMXYQRqmBXUP+VqyN\nfvalGtdATqM9m7fgSo925akl4KEcTMpkHGgrzGTH4MwWsY/fNYi7kNEoM2PZJsfuBYaSc8K7b0gS\n1xqASvqxy2D6EDOGJC1jUBKbC0RpoxxDUpUqPZjZkrepAepJa/MbOwN4dmMwInaQ2UoN7HGy2BTW\n5BCogSr/LjiD00v6do5B4pHfEwf6lUN319xsqu5UvbFZAAItZhRlZfwFfqmqaUbOyUjJxqAxdCT9\n2HMiiRkDkjFjIEp6G9jb3ZkkK0mmmVun9KI7s7Vh6U0FSA0UB5E4KKPUwApRftjQrrr01KdfMnmt\nNku/4e/Bx0BfmY/S3ezngVybOFS7EwSsL7oDcZ/NAhBoMaMoi0P7lkdujGnczqOGMST5+iPfjRJJ\n+LG7VKZvGUOSMWNI8m5ctzNJUZJMM3fOlKqd8nG9FaDZjRFE4qCMvIK06I//h0Ra15ztadfA9tLn\n5eUIT80PaZO6gzaccnow74odGofuou8QX/wPFUKmiVkAYOgYjKwsDpPb2+cyfGS4+oGzIyXx5Pa2\nAkQS3TySlC1mDEnGjIEo8bfDL+9MUpQk08yd09orL3T0VvDsxggicVDGp5fo93+HmEtdOuS1h7t5\n1iu2yyYDG89TKNcA/wXL/bWTQeB8PgAAAABJRU5ErkJggg==\n",
+      "text/latex": [
+       "$$\\left ( 3, \\quad \\left \\{ 0 : x_{0} y_{0}, \\quad 1 : x_{0} y_{1} + x_{1} y_{0}, \\quad 2 : x_{0} y_{2} + x_{1} y_{1} + x_{2} y_{0}, \\quad 3 : x_{1} y_{2} + x_{2} y_{1} + x_{3} y_{0}, \\quad 4 : x_{2} y_{2} + x_{3} y_{1}, \\quad 5 : x_{3} y_{2}\\right \\}\\right )$$"
+      ],
       "text/plain": [
-       "(4,\n",
-       " defaultdict(<function __main__.prefix_dictionaries.<locals>.<lambda>>,\n",
-       "             {0: x[0]*y[0],\n",
-       "              1: x[0]*y[1] + x[1]*y[0],\n",
-       "              2: x[0]*y[2] + x[1]*y[1] + x[2]*y[0],\n",
-       "              3: x[0]*y[3] + x[1]*y[2] + x[2]*y[1] + x[3]*y[0],\n",
-       "              4: x[0]*y[4] + x[1]*y[3] + x[2]*y[2] + x[3]*y[1] + x[4]*y[0],\n",
-       "              5: x[1]*y[4] + x[2]*y[3] + x[3]*y[2] + x[4]*y[1],\n",
-       "              6: x[2]*y[4] + x[3]*y[3] + x[4]*y[2],\n",
-       "              7: x[3]*y[4] + x[4]*y[3],\n",
-       "              8: x[4]*y[4]}))"
+       "(3, {0: x[0]⋅y[0], 1: x[0]⋅y[1] + x[1]⋅y[0], 2: x[0]⋅y[2] + x[1]⋅y[1] + x[2]⋅y\n",
+       "[0], 3: x[1]⋅y[2] + x[2]⋅y[1] + x[3]⋅y[0], 4: x[2]⋅y[2] + x[3]⋅y[1], 5: x[3]⋅y\n",
+       "[2]})"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -592,18 +613,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAABlIAAAAVBAMAAADP6m4/AAAAMFBMVEX///8AAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAv3aB7AAAAD3RSTlMAZpkQ3Ynvq81UMrtE\nInZCK3CHAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAL50lEQVR4Ae1bbYicVxV+ZmdmP2d2N0WLf0on\nqyHRiB2k+fhjsmrUFk07po0tFrcLlRJs1a22tgiJoyim1dpBJVKkZggUCv7IWoUiUTuI5oc/mjFE\nQapk2BDrH5Noqm2qZj3n3Pu+9+N97zsf2e22kAu577nnnvc8zz33nPdrNgBy63G1XY3A1QiEI3Dk\nDM/lP8T977lLb9elq69AmwGWa1+B38FOLU8Hz1sDNkEu0cSbgG7G/q58MkVxsY8rHqPjTXKfu0Bd\nedEGiuXy3rsaGFnp5CWw8syxZowSCX/Y+3NgfzSiY37DW5vWcJXEFwFB9twn2OC9H/+kZ7MWQ6IL\nHEkgv4Ho0v6Onhl/p09xdZLJR5Exx2jv2abIVjd4jIbq5KY4T90oVcPYPSS47STG/oF83VamWNnT\nvcgEtg3F//qm5QoOT2O7pR5t5Hdbw1USH4dCdt0n2eBR3LjSFw0Xs6fR42z1Ud/0jUSX9nd4ebnm\nU1ydZPJRZEwx2t6S7LanryBGxVlyJJVyDbBt40XbrcjnG3gZmLP0aVbWNIs/8saJIYF9EbjX109e\nwtQsih2jvxa404y6SAHYgNo4y1WgkI2KpSSb3DyKddcoPOoKGzAY64R9ykyuQofJ+0S2ujWiazEw\nIu3v6B1/N2MtDZRMsZeugYkt6TGpAjyLiUVLxeIVxEiKRLrd7ChZKcdb+VeBrTZiipU9TXIgB4wV\ngX0a+ErTaEQq3Y+ddeTnZSDdc8DhqhlmSwHYgNr4KrShkI2KpSSbiQWMJUPknhWPusIGDLomBNGl\nt8pvxUBaWCO6Pg0Z0/6OpEwMlEyxn66BiS0B3tL/WWMtXkGM4kopz5Kz1Bqgpy+MtjQUH1KtrPnu\nlcJgT1STlUJO6OkL3zbOXgFONMwwWwqkXkBtfJ0SkZH95rGZWkDpkm8TGneFDRh0TQihW0tUCvFY\nC7ppy+f9TasUer7vP5ligK6BiS0BitHEvDU24qAxiitlskLOUmvgxhowxLPAR6RPWuXP7X9hTuZU\np3Mgv9TBH6uWPhIFDLg1OSef4WbEjsHy/6RK6USn6eOOl/58Vul2vAdl69UqSj1jIGd0Y4MlNlMf\nAOWEuPPYYGcFpcvxrBIMWFc2XQ3Eo06IYPCEbq6dUimvN11vPSYwvL8j65aaRhNJJpkKC6LLSiYv\nBFGlmGzzDCIQOtKWTj02925Lo8WBYySVMlKnCpwmV0na9FHoA5TPObKgZNrHfWR150FuX2PNFryl\ncxMLuuncLI7N43yks48ChtK/bJ3I5dvfTse3sSxgZTI5WqNRUcAOVniilrulUCcBqB3C5AWRpItK\nwhjY6iAb/ITMFLLxxZLPBqdrGGfSA7Lpja5OiGy6O5CslNedrrceEzze34lqOfHFxk6mrXWx1ymX\nmkxeCKJKMdnmGRgCvKU7v4rhhqUScfAYyQfiQ016sGOnaZWC4v1005wVHNUlrW7D3dWngGciI52y\nfxqq4xjG65E6PgoY9FUl1orwiRbw/VhVpnuKVEqsoTStFi+OtdltubGJX9p8WG2w59mqOsthE2st\njzeLzMh+c9ngdEVVimXmsylu5lrnpmENm2y6cxs1XZ0QKnixVvmUnunWUioFGIDuEn1ZkRagG1oP\nEfPXox3RQe0vfmY0kdRzMjGuF4KoUlS2FYm5Mghs6c6LGLIeOCIGPccoXiEjUaN7wo8/Q8fhFnXJ\nGiAl7q1i/AILuiWtqrJvRx4UA7o8fPjgwW+SXB3u4PL4xll9njkMt1ie4c5vw7S4o7Ey7ekrj9FF\ngN3m8TlMdRKwyqDYHqmTH4+N1sYAItClgBoj+81lk/b05bP5FB5hJwbWsMmkOzQ9RKviu9XX9x08\nuKCDp7UuLb5yNVMrpX+667E5m25gPUzMWY9DcbglwxvajlYGvSYT40r+JAIDlW3MXAxCWzo1i1zy\nribbbBIsvKVmhTpGI7cAx5vhSvkL8HyjW6UAlzkM8b1AX59wojr+mns/kmhhuEVHfpj1WrmNCXpj\nthZCb/SHG54VVQdp+DZXuoijzSSsGBTa4/rjh83GaC2nlHoa2VLGOosNvdGPJd7oXTa7cVTnRwRr\n2GTRHarJ7Z0X1lEsOHhGazEjuluQrJRk8HqguwHXa88BuoH1CDFvPYbicAt8wbibDk7rI5kE1w1B\nFBiVbcKcDUJbWqgjR98PnNZHjMwKdYz42s8X39DT13KVK6U0awHqe8rtu7jxezdd4V/jPlEpmzA5\nn1YpAvZdTk+3TV2USvmN0R4Drq/SsChguxZkhqpDVQo93f01BZbLB4VW9Jwc5QCzMVrxpDp6nNHI\nljLWWWzoUS/HX4kz2HwMp1vKSwRr2GTRpa8mi+q8KCEkeLFWzUlPdH/w8MP/PmCpWEwGrwe6UPcU\nOj1AN7Aeoeutx/Dh/d0H3MA7Z7c+kklw3RBEgdHZxsyztnRkPnlP6SdGHHq1QomRXMiKs+E3+vvo\nE1Vbv9HrRSefvr5H79VnUlL2OfAvEOTdaxPTVFwVTLY9/fAiCnQjkDd6NUW/PG7yjMaq5zFZFbfk\nnX5w8QtUG8Q/fUQ5IGxireWVXv80sqWMdRab3DzHzmkJNvHvPxrWYpNNd2tTOY4SQtGNtBYof4AA\naGPclgxeL3Tz/OjNLUQ3tB4i5q1H+eGe97cC3GQ0SuonmRjXDUEUGJ1tzDxrS8fpPWXeY9BPjBCv\nUGJUZF/cFSskcA3QT392W4exy3QBqbEuT9cJaolKKV2auFCm4PgpS7V4YlpS2nPKYKf27nnQB8tN\n43AH2MAoCqzQiLeSldxONJ7nv+bkAhxaLNH91YfVBih02DzOAcWGtfxbqt320Mc9Rvb0STa4mcPn\ntAQb3KLndepZbDLpTn5HnxclhASPtR4tEF1q//H1g9H9W0e8xVFK0A2sh4mZ9aTs70nkPuvvr51M\n7rcvTYIOUTIxbhwCmdaBiQyYuRgEthQPYWvDi10/MTIrlBjFlVKapZV/6dUHUPig0Iq60szmFjDa\nlLE8aolVNC3H/IEzS+tI8lMW2+bopY5T2ndKqieWl1/29fj1zC/Iz2P0T/94k597qSkj0207t2M9\nlSW7zT+0RLcgH1Yb6IyKc0CxEe2uqnFHEj9fCbKnT7DBlnNfds6kvwDy2cglh410pVhssun6T18S\nPHn68mgxXdy1/AA8/UB0KdlUC9ENrYfomvWk7G95wxeq/v7ayVRYYNxwMjGuCQHb6kqJso2ZKwO+\ndHix4BgVZ2izPH0fMeLQqxVKjOJKwW4mw+0pdXD6U84oNPBTluzo0YlT2neaCVbmE7o2cSsPQymw\nfHauQh03nQMkEZtchY70kdlu9KcPqnl6UfbL5prIs4FlTa5CXRZdjOtvBTohyJroitajtaJ0cbTB\nxOwo8ShXoU7oBtaj6A7V9YXKS5rM/e0tmRRuFAJmYwLDI/rww8xXb0vNCgXJVEockZrQcLs5dxgY\nxSn7PmUwUs/TZzpJac9pJlixE/DvqNntI9jZsu4pGlab/Ra/U5LDRrRFbaIPuYoWPL1o+2RTqpWa\nyluSTRbdrc0yPUhyy7flIMFTWo9WriIGdNHUR/vQH116tD09rU4P0A2sR4hZ6+lnf3tKJsa1QsAc\ndWAUXWGuEmx1tjReoY6RVIq81k+oDUK+o6jYfb5uj4LyIW+mMD3RoUqZp0XS0W5ZYM5f3dsnuTK7\nfT9+RUofVtmNP/rkT50zhI3S7nAmgF/qsa9n9XbPNn0Ys3nmyR9WU0wEN4tuoZ27xzlP6CqtT2sF\n6e7Gtdl0A+sRYmY9/exvb8nEuFYInNDIgJmv5paaFaoY8e0T+Ab9Ky+yRPdddXD6KLEdZWJw8tYD\nrq507l3k9x2vdBJOs8DivHWdeSNx+8JSE0jAKkv6/xEXnHOEjdJOOxPAi3rs61kdpaV3ijs0bD6/\nvOxOqZHgZtEdn7uj7ZwodJXWp7WCdJ8+u99B1QNDN7AeIWbW4ydN1v72lkyMa4UgSZKZr+aWmhWq\nGB1vMYex9dTR96RQuy40MbA+AyznZszAEH2cWPZz0Zy7BmwMeEB6E9DN2N+VT6a0MK10jI7cBvwf\nVSIZBouTsowAAAAASUVORK5CYII=\n",
+      "text/latex": [
+       "$$\\left \\{ \\left ( 1, \\quad 3\\right ) : 1 = x_{1} + y_{1}, \\quad \\left ( 2, \\quad 3\\right ) : 0 = x_{1} y_{1} + x_{2} + y_{2}, \\quad \\left ( 3, \\quad 3\\right ) : 0 = x_{1} y_{2} + x_{2} y_{1} + x_{3} + y_{3}, \\quad \\left ( 4, \\quad 3\\right ) : 0 = x_{1} y_{3} + x_{2} y_{2} + x_{3} y_{1}, \\quad \\left ( 5, \\quad 3\\right ) : 1 = x_{2} y_{3} + x_{3} y_{2}, \\quad \\left ( 6, \\quad 3\\right ) : 0 = x_{3} y_{3}\\right \\}$$"
+      ],
       "text/plain": [
-       "[Eq(0, x[1]), Eq(1, x[2]), Eq(0, x[3]), Eq(1, x[4])]"
+       "{(1, 3): 1 = x[1] + y[1], (2, 3): 0 = x[1]⋅y[1] + x[2] + y[2], (3, 3): 0 = x[1\n",
+       "]⋅y[2] + x[2]⋅y[1] + x[3] + y[3], (4, 3): 0 = x[1]⋅y[3] + x[2]⋅y[2] + x[3]⋅y[1\n",
+       "], (5, 3): 1 = x[2]⋅y[3] + x[3]⋅y[2], (6, 3): 0 = x[3]⋅y[3]}"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -625,20 +652,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "StopIteration",
-     "evalue": "",
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'is_Relational'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-379-240f0bd42617>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msols\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mStopIteration\u001b[0m: "
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-54-240f0bd42617>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msols\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-50-ebae1cf2e4a3>\u001b[0m in \u001b[0;36mdiofantine\u001b[1;34m(systems)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mdiofantine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msystems\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0ms\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msystems\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0msol\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msolve\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msol\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_integer\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python3.5/site-packages/sympy/solvers/solvers.py\u001b[0m in \u001b[0;36msolve\u001b[1;34m(f, *symbols, **flags)\u001b[0m\n\u001b[0;32m    829\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mPoly\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    830\u001b[0m             \u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_expr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 831\u001b[1;33m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mbool\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBooleanAtom\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mfi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mis_Relational\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    832\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mreduce_inequalities\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msymbols\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msymbols\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    833\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'is_Relational'"
      ]
     }
    ],
