--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -23,6 +23,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[UVa 540][UVa540]: **Team Queue** ([code][UVa540:code])<br>\n",
+    "a variant of `deque` to support team enqueing strategy. Tested using debugger data and seems to work but the online judge cannot exec it.\n",
+    "\n",
+    "[UVa540]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=481\n",
+    "[UVa540:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/540.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[UVa 11093][UVa11093]: **Just Finish it up** ([code][UVa11093:code])<br>\n",
     "locally seems to work, although the judge cannot exec it\n",
     "\n",
