--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -52,6 +52,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[UVa 11988][UVa11988]: **Broken Keyboard (a.k.a. Beiju Text)** ([code][UVa11988:code])<br>\n",
+    "use a forward index that gets reset when open square bracket `[` is read, otherwise run to last when closed square bracket `]` is read.\n",
+    "\n",
+    "[UVa11988]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=3139\n",
+    "[UVa11988:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/11988.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[UVa 1062][UVa1062]: **Containers** ([code][UVa1062:code])<br>\n",
     "use a set of stacks where you push an object `c` onto a stack `s` iff `c <= s[-1]`; this allows us to minimize the number of stacks when *all* stacked elements are popped out in *lexigraphic* order.\n",
     "\n",
