--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "[UVa 11988][UVa11988]: **Broken Keyboard (a.k.a. Beiju Text)** ([code][UVa11988:code])<br>\n",
-    "use a forward index that gets reset when open square bracket `[` is read, otherwise run to last when closed square bracket `]` is read.\n",
+    "use a forward index that gets reset when open square bracket `[` is read, otherwise run to last when closed square bracket `]` is read; moreover, we use a `collections.deque` as a *linked list*.\n",
     "\n",
     "[UVa11988]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=3139\n",
     "[UVa11988:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/11988.py"
