TLE for UVa11849.

--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -45,6 +45,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TLE problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[UVa 11849][UVa11849]: **CD** ([code][UVa11849:code])<br>\n",
+    "All the following attempts receive *TLE*:\n",
+    "\n",
+    "   - naive problem statement reproduction using vanilla `set` objects:\n",
+    "   ```python\n",
+    "    jack = {int(next_line()) for _ in range(n)}\n",
+    "    jill = {int(next_line()) for _ in range(m)}\n",
+    "    print(len(jack & jill)\n",
+    "    ```\n",
+    "   \n",
+    "   - `set` membership testing *on the fly*:\n",
+    "   ```python\n",
+    "   jack = {int(next_line()) for _ in range(n)}\n",
+    "   commons = {jill_cd for _ in range(m) for jill_cd in [int(next_line())] if jill_cd in jack}\n",
+    "   print(len(commons))\n",
+    "   ```\n",
+    "   - *heavy* bitmasking, e:\n",
+    "   ```python\n",
+    "   jack = 0\n",
+    "   for _ in range(n): \n",
+    "       jack |= 1 << int(next(next_line)) # set presence\n",
+    "\n",
+    "   commons = 0\n",
+    "   for _ in range(m): \n",
+    "       j = int(next(next_line)) \n",
+    "       commons += (jack & (1 << j)) >> j # check if `jack` owns it too and count `1` if `True`\n",
+    "\n",
+    "   print(commons)\n",
+    "   ```\n",
+    "\n",
+    "\n",
+    "[UVa11849]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=2949\n",
+    "[UVa11849:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/11849.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Solved problems"
    ]
   },
