--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -68,7 +68,7 @@
     "   commons = {jill_cd for _ in range(m) for jill_cd in [int(next_line())] if jill_cd in jack}\n",
     "   print(len(commons))\n",
     "   ```\n",
-    "   - *heavy* bitmasking, e:\n",
+    "   - *heavy* bitmasking, even if we *inline* one-liners to avoid function calls:\n",
     "   ```python\n",
     "   jack = 0\n",
     "   for _ in range(n): \n",
