Add a comment about TLE verdict of UVa 11849.

--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -68,7 +68,7 @@
     "   commons = {jill_cd for _ in range(m) for jill_cd in [int(next_line())] if jill_cd in jack}\n",
     "   print(len(commons))\n",
     "   ```\n",
-    "   - *heavy* bitmasking, even if we *inline* one-liners to avoid function calls:\n",
+    "   - using bitmasking, even if we *inline* one-liners to avoid function calls:\n",
     "   ```python\n",
     "   jack = 0\n",
     "   for _ in range(n): \n",
@@ -81,6 +81,8 @@
     "\n",
     "   print(commons)\n",
     "   ```\n",
+    "\n",
+    "The lastest solution available on the repo is the last one, using bitmasks...at this time I am not able to do better than that :( \n",
     "\n",
     "\n",
     "[UVa11849]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=2949\n",
