Add `rabbits` recursive structure.

--- a/tutorials/recursive-structures.ipynb
+++ b/tutorials/recursive-structures.ipynb
@@ -21,9 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -203,12 +203,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "the following is another *pretty printer* which uses only anchors and stars table to represent the board, old style but effective to spot bugs..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# skip this, now the above pretty printer should work\n",
+    "def make_pretty_old(dim, joiner=' ', separator=','):\n",
+    "    \n",
+    "    from collections import defaultdict\n",
+    "\n",
+    "    rows, cols = dim\n",
+    "    \n",
+    "    def pretty(structures):\n",
+    "        strings = []\n",
+    "        for anchors, stars, shapes, (anchors_table, stars_table) in structures:\n",
+    "            #print(anchors_table)\n",
+    "            table = defaultdict(lambda: joiner)\n",
+    "\n",
+    "            for a in ones_of(anchors):\n",
+    "                ca = coor(a)\n",
+    "                table[ca] = table[ca] + separator + anchors_table[ca] if ca in table else anchors_table[ca]\n",
+    "\n",
+    "            for s in ones_of(stars):\n",
+    "                cs = coor(s)\n",
+    "                table[cs] = table[cs] + separator if cs in table else '★'\n",
+    "\n",
+    "            s = ''\n",
+    "            for r in range(rows):\n",
+    "                s += joiner.join(table[r, c] for c in range(cols)) + '\\n'\n",
+    "\n",
+    "            strings.append(s)\n",
+    "\n",
+    "        return  ''.join(strings)\n",
+    "    \n",
+    "    return pretty"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Triangulated polygons"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -259,47 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# skip this, now the above pretty printer should work\n",
-    "def make_pretty_old(dim, joiner=' ', separator=','):\n",
-    "    \n",
-    "    from collections import defaultdict\n",
-    "\n",
-    "    rows, cols = dim\n",
-    "    \n",
-    "    def pretty(structures):\n",
-    "        strings = []\n",
-    "        for anchors, stars, shapes, (anchors_table, stars_table) in structures:\n",
-    "            #print(anchors_table)\n",
-    "            table = defaultdict(lambda: joiner)\n",
-    "\n",
-    "            for a in ones_of(anchors):\n",
-    "                ca = coor(a)\n",
-    "                table[ca] = table[ca] + separator + anchors_table[ca] if ca in table else anchors_table[ca]\n",
-    "\n",
-    "            for s in ones_of(stars):\n",
-    "                cs = coor(s)\n",
-    "                table[cs] = table[cs] + separator if cs in table else '★'\n",
-    "\n",
-    "            s = ''\n",
-    "            for r in range(rows):\n",
-    "                s += joiner.join(table[r, c] for c in range(cols)) + '\\n'\n",
-    "\n",
-    "            strings.append(s)\n",
-    "\n",
-    "        return  ''.join(strings)\n",
-    "    \n",
-    "    return pretty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -322,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -390,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -432,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -498,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -619,6 +626,356 @@
       "                         \n",
       "                         \n",
       "                         \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rabbits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# in the following, the symbol ★ has a generation power, \n",
+    "# namely produces a new structure with the basic shape replacing it.\n",
+    "\n",
+    "\"\"\"\n",
+    "  ★\n",
+    "○  \n",
+    "\n",
+    "● ▲\n",
+    "  ★\n",
+    "\"\"\"\n",
+    "shapes = {\n",
+    "    'young': lambda r, c: Anchor(symbol='○', stars=[\n",
+    "                Star(row=r-1, col=c+1, offsets=None, link='senior', symbol='★'),]),\n",
+    "    'senior': lambda r, c: Anchor(symbol='●', stars=[\n",
+    "                Star(row=r, col=c+1, offsets=None, link='young', symbol='▲'),\n",
+    "                Star(row=r+1, col=c+1, offsets=None, link='senior', symbol='★'),]),\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rows, cols = 8, 25\n",
+    "coor, number = coordinates(rows), numbering(rows)\n",
+    "\n",
+    "# starts at the first cell of the 13th column\n",
+    "rabbits = recursive_structures((shapes, 'young'), 4, (coor, number))\n",
+    "representations = map(make_pretty((rows, cols), joiner=''), rabbits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First generation contains only the *seed* symbol ★"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "★                        \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ★                       \n",
+      "○                        \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●▲                      \n",
+      "○ ★                      \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         \n",
+      "                         \n",
+      "   ★                     \n",
+      " ●○                      \n",
+      "○ ★                      \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●                       \n",
+      "○ ●▲                     \n",
+      "   ★                     \n",
+      "                         \n",
+      "                         \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         \n",
+      "                         \n",
+      "   ★                     \n",
+      " ●○                      \n",
+      "○ ●▲                     \n",
+      "   ★                     \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "   ●▲                    \n",
+      " ●○ ★                    \n",
+      "○                        \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●  ★                    \n",
+      "○ ●○                     \n",
+      "   ★                     \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●                       \n",
+      "○ ●                      \n",
+      "   ●▲                    \n",
+      "    ★                    \n",
+      "                         \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         \n",
+      "                         \n",
+      "   ●▲                    \n",
+      " ●○ ★                    \n",
+      "○ ●▲                     \n",
+      "   ★                     \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●○ ★                    \n",
+      "○ ●○                     \n",
+      "   ★                     \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●○                      \n",
+      "○ ●                      \n",
+      "   ●▲                    \n",
+      "    ★                    \n",
+      "                         \n",
+      "                         \n",
+      "     ★                   \n",
+      "   ●○                    \n",
+      " ●○ ★                    \n",
+      "○                        \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "   ●                     \n",
+      " ●○ ●▲                   \n",
+      "○    ★                   \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●  ★                    \n",
+      "○ ●○                     \n",
+      "   ●▲                    \n",
+      "    ★                    \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●  ●▲                   \n",
+      "○ ●○ ★                   \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●                       \n",
+      "○ ●  ★                   \n",
+      "   ●○                    \n",
+      "    ★                    \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      "                         \n",
+      " ●                       \n",
+      "○ ●                      \n",
+      "   ●                     \n",
+      "    ●▲                   \n",
+      "     ★                   \n",
       "\n"
      ]
     }
