Another attempt for UVa 11849 using heaps, again TLE :(

--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -82,8 +82,7 @@
     "   print(commons)\n",
     "   ```\n",
     "\n",
-    "The lastest solution available on the repo is the last one, using bitmasks...at this time I am not able to do better than that :( \n",
-    "\n",
+    "All the above solutions do not use the fact that lists comes already sorted, so the last code available at the given link, try to use the former list as an heap structure and since it is ordered, there is no need to `heapify` it. However, this solution gets TLE too :(\n",
     "\n",
     "[UVa11849]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=2949\n",
     "[UVa11849:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/11849.py"
